# zombie_survival_game

./: Cargo.toml  README.md  TODO.md
assets/: Bullet.aseprite  Enemy.aseprite  HitCollider.aseprite  HurtCollider.aseprite  Player.aseprite
src/: animation.rs  bullet.rs  common.rs  events.rs  main.rs  player.rs  user_controls.rs  zombie.rs
